--- a/templates/output.html
+++ b/templates/output.html
@@ -1,82 +1,46 @@
 <div class="row pl-2">
-    <div class="row col-md">
-      <label class="align-top col-md">Puntos fijos</label>
-      <figure class="col-3">
-        <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
-        <figcaption>
-          Sean (D,f) un sistema dinámico discreto y p ∈ D. Se dice que p es un punto fijo de f si f(p) = p.
-        </figcaption>
-      </figure>
-    </div>
-    <ul id="fixed_points" class="col-md-8">
-        {% for fixed_point in fixed_points %}
-        <li>
-            <ul>
-                <li>x: {{fixed_point[0]}}</li>
-                <li>y: {{fixed_point[1]}}</li>
-            </ul>
-        </li>
-        {% endfor %}
-    </ul>
-  </div>
-  <div class="row pl-2">
-    <div class="row col-md">
-      <label class="align-top col-md">Estabilidad</label>
-      <figure class="col-3">
-        <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
-        <figcaption>
-          Para investigar la estabilidad de un punto fijo x*, debemos calcular la matriz jacobiana de la función, evaluar el punto fijo y analizar el resultado numérico obtenido de los autovalores.
-        </figcaption>
-      </figure>
-    </div>
-    <ul class="col-sm-8">
-      {% for point in stability %}
-      <li>El punto ({{point[0][0]}},{{point[0][1]}}) tiene estabilidad: {{point[1]}}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  <div class="row pl-2">
-    <div class="row col-md">
-      <label class="align-top col-md">Matriz Jacobiana</label>
-      <figure class="col-3">
-        <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
-        <figcaption>
-          La matriz jacobiana es una matriz formada por las derivadas parciales de primer orden de una función.
-        </figcaption>
-      </figure>
-    </div>
-    <ul class="col-sm-8">
-      {{j}}
-    </ul>
-  </div>
-  <div class="row pl-2">
-    <div class="row col-md">
-      <label class="align-top col-md">Autovalores</label>
-      <figure class="col-3">
-        <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
-        <figcaption>
-          Sea A una matriz cuadrada de orden M. Diremos que un escalar λ ∈ K (= R o C) es un autovalor de A si existe un vector v ∈ K^m , v != 0 tal que Av = λv, en cuyo caso se dice que v es un autovector de A asociado al autovalor λ.
-        </figcaption>
-      </figure>
-    </div>
-    <ul id="eigen_vals" class="col-sm-8">
-      {% for i in range(eigen_values|length) %}
-      <li>&lambda;<sub>{{i}}</sub>: {{eigen_values[i]}}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  <div class="row pl-2">
-    <div class="row col-md">
-      <label class="align-top col-md">Exponentes de Lyapunov </label>
-      <figure class="col-3">
-        <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
-        <figcaption>
-          El Exponente Lyapunov o Exponente característico Lyapunov de un sistema dinámico es una cantidad que caracteriza el grado de separación de dos trayectorias infinitesimalmente cercanas.
-        </figcaption>
-      </figure>
-    </div>
-    <ul class="col-sm-8">
-      <li>L<sub>1</sub>: {{exp_l[0]}}</li>
-      <li>L<sub>2</sub>: {{exp_l[1]}}</li>
-    </ul>
-  </div>
+  <label data-toggle="tooltip" data-placement="top" title="Sean (D,f) un sistema dinámico discreto y p ∈ D. Se dice que p es un punto fijo de f si f(p) = p." class="align-top col-md">Puntos fijos</label>
+  <ul id="fixed_points" class="col-md-8">
+    {% for fixed_point in fixed_points %}
+    <li>
+      <ul>
+        <li>x: {{fixed_point[0]}}</li>
+        <li>y: {{fixed_point[1]}}</li>
+      </ul>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+<div class="row pl-2">
+  <label data-toggle="tooltip" data-placement="top" title = "Para investigar la estabilidad de un punto fijo x*, debemos calcular la matriz jacobiana de la función, evaluar el punto fijo y analizar el resultado numérico obtenido de los autovalores.
+  " class="align-top col-md">Estabilidad</label>
+  <ul class="col-sm-8">
+    {% for point in stability %}
+    <li>El punto ({{point[0][0]}},{{point[0][1]}}) tiene estabilidad: {{point[1]}}</li>
+    {% endfor %}
+  </ul>
+</div>
+<div class="row pl-2">
+  <label data-toggle="tooltip" data-placement="top" title="La matriz jacobiana es una matriz formada por las derivadas parciales de primer orden de una función." class="align-top col-md">Matriz Jacobiana</label>
+
+  <ul class="col-sm-8">
+    {{j}}
+  </ul>
+</div>
+<div class="row pl-2">
+  <label data-toggle="tooltip" data-placement="top" title="Sea A una matriz cuadrada de orden M. Diremos que un escalar λ ∈ K (= R o C) es un autovalor de A si existe un vector v ∈ K^m , v != 0 tal que Av = λv, en cuyo caso se dice que v es un autovector de A asociado al autovalor λ.
+  " class="align-top col-md">Autovalores</label>
+  <ul id="eigen_vals" class="col-sm-8">
+    {% for i in range(eigen_values|length) %}
+    <li>&lambda;<sub>{{i}}</sub>: {{eigen_values[i]}}</li>
+    {% endfor %}
+  </ul>
+</div>
+<div class="row pl-2">
+  <label data-toggle="tooltip" data-placement="top" title="El Exponente Lyapunov o Exponente característico Lyapunov de un sistema dinámico es una cantidad que caracteriza el grado de separación de dos trayectorias infinitesimalmente cercanas.
+  " class="align-top col-md">Exponentes de Lyapunov </label>
+  <ul class="col-sm-8">
+    <li>L<sub>1</sub>: {{exp_l[0]}}</li>
+    <li>L<sub>2</sub>: {{exp_l[1]}}</li>
+  </ul>
+</div>
