--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,12 @@
             <input class="col-sm-4" style="text-align: right" type="number" id="n" name="n" value="{{n}}" />
           </div>
           <div class="row p-2">
-            <label class="col-md" for="vars">Iteraciones finales (0 si no hay final)</label>
+            <label class="col-md" for="vars">Iteraciones finales (m, 0 si no hay final)</label>
             <input class="col-sm-4" style="text-align: right" type="number" id="m" name="m" value="{{m}}" />
+          </div>
+          <div class="row p-2">
+            <label class="col-md" for="vars">Puntos iniciales (k)</label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="k" name="k" value="{{k}}" />
           </div>
         </div>
         <div class="border-top py-2">
@@ -51,8 +55,16 @@
             <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{x0}}" />
           </div>
           <div class="row p-2">
+            <label class="col-md" for="x0">X<sub>n</sub></label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{xn}}" />
+          </div>
+          <div class="row p-2">
             <label class="col-md" for="y0">Y<sub>0</sub></label>
             <input class="col-sm-4" style="text-align: right" type="number" id="y0" name="y0" value="{{y0}}" />
+          </div>
+          <div class="row p-2">
+            <label class="col-md" for="x0">Y<sub>n</sub></label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{yn}}" />
           </div>
           <div id="params">
 
@@ -83,9 +95,11 @@
                     value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)" />
                 </div>
 
-                <div class="col-5 d-flex justify-content-end mt-4 mb-2">
-                  <input class="btn btn-primary" id="go_button" type="button" value="Go!" />
+                <div class="d-flex col-3 justify-content-end mt-4">
+                  <img class="col-8 col-lg-3 h-50" id="loading" hide src="{{ url_for('static', filename = 'loading.gif') }}">
                 </div>
+                <div class="col-2 d-flex justify-content-end mt-4 mb-2"><input class="btn btn-primary" id="go_button"
+                    type="button" value="Go!"></div>
               </div>
 
             </div>
@@ -109,11 +123,16 @@
                     <a class="nav-link " id="att_tab" data-toggle="tab" role="tab" aria-controls="plot_att" onchange=""
                       aria-selected="false" href="#plot_att">Atractores</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link " id="cue_tab" data-toggle="tab" role="tab" aria-controls="plot_cue" onchange=""
+                      aria-selected="false" href="#plot_cue">Cuencas de atracción</a>
+                  </li>
                 </ul>
                 <div class="tab-content" id="tabs">
                   <div id="plot_orb" class="tab-pane fade show active" role="tabpanel" aria-labelledby="plot_orb-tab">
                   </div>
                   <div id="plot_att" class="tab-pane fade" role="tabpanel" aria-labelledby="plot_att-tab"></div>
+                  <div id="plot_cue" class="tab-pane fade" role="tabpanel" aria-labelledby="plot_cue-tab"></div>
                 </div>
               </div>
           </div>
