añadidas cuencas de atraccion

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,19 +52,19 @@
           <div class="seccion">Parámetros</div>
           <div class="row p-2">
             <label class="col-md" for="x0">X<sub>0</sub></label>
-            <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{x0}}" />
+            <input class="col-sm-4" style="text-align: right" type="number" step="any" id="x0" name="x0" value="{{x0}}" />
           </div>
           <div class="row p-2">
             <label class="col-md" for="x0">X<sub>n</sub></label>
-            <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{xn}}" />
+            <input class="col-sm-4" style="text-align: right" type="number" step="any" id="x0" name="x0" value="{{xn}}" />
           </div>
           <div class="row p-2">
             <label class="col-md" for="y0">Y<sub>0</sub></label>
-            <input class="col-sm-4" style="text-align: right" type="number" id="y0" name="y0" value="{{y0}}" />
+            <input class="col-sm-4" style="text-align: right" type="number" step="any" id="y0" name="y0" value="{{y0}}" />
           </div>
           <div class="row p-2">
             <label class="col-md" for="x0">Y<sub>n</sub></label>
-            <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{yn}}" />
+            <input class="col-sm-4" style="text-align: right" type="number" step="any" id="x0" name="x0" value="{{yn}}" />
           </div>
           <div id="params">
 
