--- a/templates/output.html
+++ b/templates/output.html
@@ -6,8 +6,8 @@
     {% for fixed_point in fixed_points %}
     <li>
       <ul>
-        <li>x: {{fixed_point[0]|round(3)}}</li>
-        <li>y: {{fixed_point[1]|round(3)}}</li>
+        <li>x: {{fixed_point[0]}}</li>
+        <li>y: {{fixed_point[1]}}</li>
       </ul>
     </li>
     {% endfor %}
