arreglados numeros de lyapunov

--- a/templates/index.html
+++ b/templates/index.html
@@ -185,10 +185,18 @@
           </div>
           <div class="row pl-2">
             <label data-toggle="tooltip" data-placement="bottom" title="El Exponente Lyapunov o Exponente característico Lyapunov de un sistema dinámico es una cantidad que caracteriza el grado de separación de dos trayectorias infinitesimalmente cercanas.
+            " class="align-top col-4 col-md">Numeros de Lyapunov </label>
+            <ul class="col col-sm-8">
+              <li>L<sub>1</sub>: {{n_l[0]}}</li>
+              <li>L<sub>2</sub>: {{n_l[1]}}</li>
+            </ul>
+          </div>     
+          <div class="row pl-2">
+            <label data-toggle="tooltip" data-placement="bottom" title="El Exponente Lyapunov o Exponente característico Lyapunov de un sistema dinámico es una cantidad que caracteriza el grado de separación de dos trayectorias infinitesimalmente cercanas.
             " class="align-top col-4 col-md">Exponentes de Lyapunov </label>
             <ul class="col col-sm-8">
-              <li>L<sub>1</sub>: {{exp_l[0]}}</li>
-              <li>L<sub>2</sub>: {{exp_l[1]}}</li>
+              <li>&lambda;<sub>1</sub>: {{exp_l[0]}}</li>
+              <li>&lambda;<sub>2</sub>: {{exp_l[1]}}</li>
             </ul>
           </div>
         </div>
