--- a/templates/output.html
+++ b/templates/output.html
@@ -44,7 +44,7 @@
 </div>
 <div class="row pl-2">
   <label data-toggle="tooltip" data-placement="bottom" title="El Exponente Lyapunov o Exponente característico Lyapunov de un sistema dinámico es una cantidad que caracteriza el grado de separación de dos trayectorias infinitesimalmente cercanas.
-  " class="align-top col-4 col-md">Numeros de Lyapunov </label>
+  " class="align-top col-4 col-md">Números de Lyapunov </label>
   <ul class="col col-sm-8">
     <li>L<sub>1</sub>: {{n_l[0]}}</li>
     <li>L<sub>2</sub>: {{n_l[1]}}</li>
